apps-backend/backend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
  - http:
      paths:
        - path: /apps-frontend
          backend:
            serviceName: apps-frontend
            servicePort: 80
        - path: /apps-backend
          backend:
            serviceName: apps-backend
            servicePort: 8080
